Asteria/force-app/main/default/objects/Purchase_Orders__c/Purchase_Orders__c.object-meta.xml
<CustomObject>
    <description>Accounts place Purchase Orders for ore in Inventory.</description>
    <label>Purchase Orders</label>
    <nameField>
        <displayFormat>P-{000000}</displayFormat>
        <label>Purchase Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Orders</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>