Asteria/force-app/main/default/objects/Purchase_Orders__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>The Account making the Purchase.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Purchases</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>