Asteria/force-app/main/default/objects/Purchase_Orders__c/fields/Inventory__c.field-meta.xml
<CustomField>
    <fullName>Inventory__c</fullName>
    <description>The Inventory being Purchased by an Account.</description>
    <label>Inventory</label>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipName>Purchases</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>