Asteria/force-app/main/default/objects/Purchase_Orders__c/fields/Inventory_Type__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Type__c</fullName>
    <formula>TEXT(Inventory__r.Ore_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inventory Type</label>
    <type>Text</type>
</CustomField>