Asteria/force-app/main/default/objects/Purchase_Orders__c/fields/Inventory_Weight__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Weight__c</fullName>
    <formula>Inventory__r.Weight__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inventory Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>