Asteria/force-app/main/default/objects/Purchase_Orders__c/fields/Rejected__c.field-meta.xml
<CustomField>
    <fullName>Rejected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Displays whether this Purchase Order has been Rejected.</description>
    <inlineHelpText>Displays whether this Purchase Order has been Rejected.</inlineHelpText>
    <label>Rejected</label>
    <type>Checkbox</type>
</CustomField>