Asteria/force-app/main/default/objects/Purchase_Orders__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>This Purchase Order is either New, Pending, or Approved.</description>
    <inlineHelpText>This Purchase Order is either New, Pending, or Approved.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Rejected__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Status</valueSetName>
    </valueSet>
</CustomField>