Asteria/force-app/main/default/objects/Purchase_Orders__c/validationRules/Rejected_Inventory_Cannot_be_Purchased.validationRule-meta.xml
<ValidationRule>
    <fullName>Rejected_Inventory_Cannot_be_Purchased</fullName>
    <active>true</active>
    <description>Inventory items with Rejected status cannot be purchased.</description>
    <errorConditionFormula>Inventory__r.Rejected__c=TRUE</errorConditionFormula>
    <errorMessage>Inventory items with Rejected status cannot be purchased.</errorMessage>
</ValidationRule>